<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.ccit19.merdog_doctor.Regit_2kakao" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Regit_2kakao">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="회원가입"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <EditText
                    android:id="@+id/s_doctorname"
                    android:layout_width="305dp"
                    android:layout_height="49dp"
                    android:layout_marginTop="32dp"
                    android:ems="10"
                    android:hint="이름"
                    android:inputType="textPersonName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/doctornameAlt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/s_doctorname"
                    app:layout_constraintTop_toBottomOf="@+id/s_doctorname" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

                <Button
                    android:id="@+id/cert_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cert_send"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/cert_num"
                    android:layout_width="184dp"
                    android:layout_height="52dp"
                    android:layout_marginTop="12dp"
                    android:ems="10"
                    android:hint="@string/cert_num"
                    android:inputType="number"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/phonecheck" />

                <Button
                    android:id="@+id/certnum_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/check"
                    app:layout_constraintBottom_toBottomOf="@+id/cert_num"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/cert_num"
                    app:layout_constraintTop_toTopOf="@+id/cert_num"
                    app:layout_constraintVertical_bias="0.75" />

                <TextView
                    android:id="@+id/certnumAlt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/cert_num"
                    app:layout_constraintTop_toBottomOf="@+id/cert_num" />

                <EditText
                    android:id="@+id/doctorphone"
                    android:layout_width="182dp"
                    android:layout_height="43dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:ems="10"
                    android:hint="전화번호를 입력해주세요"
                    android:inputType="phone"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toStartOf="@+id/cert_send"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/phonecheck"
                    android:layout_width="204dp"
                    android:layout_height="18dp"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/doctorphone" />

                <Button
                    android:id="@+id/numbercheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="31dp"
                    android:layout_marginLeft="31dp"
                    android:text="중복확인"
                    app:layout_constraintEnd_toEndOf="@+id/cert_send"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/doctorphone"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintBottom_toTopOf="@+id/fin_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">

                <CheckBox
                    android:id="@+id/Agreed_Check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="이용약관"
                    app:layout_constraintBottom_toBottomOf="@+id/Agreed_Check"
                    app:layout_constraintStart_toEndOf="@+id/Agreed_Check"
                    app:layout_constraintTop_toTopOf="@+id/Agreed_Check" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="개인정보 활용동의"
                    app:layout_constraintBottom_toBottomOf="@+id/textView5"
                    app:layout_constraintStart_toEndOf="@+id/textView5"
                    app:layout_constraintTop_toTopOf="@+id/textView5" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/fin_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="161dp"
                android:layout_marginLeft="161dp"
                android:layout_marginEnd="161dp"
                android:layout_marginRight="161dp"
                android:layout_marginBottom="32dp"
                android:text="@string/check"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/finkakao_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="확 인"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout6" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</layout>
